--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,5 +1,6 @@
 body {
     font-family: Arial, sans-serif;
+    padding: 20px;
 }
 
 #app {
@@ -16,4 +17,11 @@ body {
 #task-list li {
     padding: 10px;
     border-bottom: 1px solid #ccc;
+}
+
+
+
+#calendar {
+    max-width: 900px;
+    margin: 0 auto;
 }
