--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+
     <title>Task Scheduler</title>
     <style>
         /* Add some basic styling */
@@ -11,10 +13,16 @@
 </head>
 <body>
     <div class="container">
-        <h1>Task Scheduler</h1>
-        <input type="text" id="taskInput" placeholder="New task">
-        <button onclick="addTask()">Add Task</button>
-        <ul id="taskList"></ul>
+        <h1 class="text-center my-4">Task Scheduler</h1>
+        <div class="input-group mb-3">
+            <input type="text" id="taskInput" class="form-control" placeholder="New task">
+            <div class="input-group-append">
+                <button class="btn btn-outline-secondary" onclick="addTask()">Add Task</button>
+            </div>
+        </div>
+        <ul id="taskList" class="list-group">
+            <!-- Tasks will be appended here -->
+        </ul>
     </div>
     <script>
         async function fetchTasks() {
@@ -25,7 +33,7 @@
             tasks.forEach(task => {
                 const li = document.createElement('li');
                 li.textContent = task;
-                li.className = 'task';
+                li.className = 'list-group-item task';
                 taskList.appendChild(li);
             });
         }
@@ -47,4 +55,5 @@
         window.onload = fetchTasks;
     </script>
 </body>
+
 </html>
